finished main content section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
   <body>
-    <h1>Seattle's premiere drive-thru cat rentals</h1>
+    <header>
+      <section class="heading">
+        <h1>Kitties to go!</h1>
+        <p class="subheading">Seattle's premiere drive-thru cat rentals</p>
+      </section>
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Rates</a>
+        <a href="#">Liability Release</a>
+        <a href="#">Kitty Profiles</a>
+        <a href="#">Book a Cat</a>
+      </nav>
+    </header>
     <aside class="clearfix">
       <section>
         <h3>Cats in the news</h3>
@@ -32,6 +44,18 @@
         </article>
       </section>
     </aside>
+    <section class="content">
+      <article>
+        <p class="content-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque egestas congue quisque egestas diam. Sagittis eu volutpat odio facilisis mauris sit amet.</p>
+        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </article>
+      <article>
+        <h3>The kitties to go story</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus sit amet est placerat. A condimentum vitae sapien pellentesque habitant morbi. In nibh mauris cursus mattis molestie a iaculis at. Imperdiet nulla malesuada pellentesque elit. Vitae justo eget magna fermentum iaculis eu non diam. Mollis aliquam ut porttitor leo a diam sollicitudin. Ullamcorper malesuada proin libero nunc consequat interdum varius. Et malesuada fames ac turpis egestas maecenas. Sed cras ornare arcu dui vivamus arcu felis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing.</p>
+      </article>
+    </section>
     <footer>
       <p>This is a footer</p>
     </footer>
