--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#">Book a Cat</a>
       </nav>
     </header>
-    <aside class="clearfix">
+    <aside>
       <section>
         <h3>Cats in the news</h3>
         <article>
@@ -44,7 +44,7 @@
         </article>
       </section>
     </aside>
-    <section class="content">
+    <section class="content clearfix">
       <article>
         <p class="content-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque egestas congue quisque egestas diam. Sagittis eu volutpat odio facilisis mauris sit amet.</p>
@@ -57,7 +57,14 @@
       </article>
     </section>
     <footer>
-      <p>This is a footer</p>
+      <img class="company-info" src="images/lesson04-mock5-cat-logo.png" alt="website logo">
+      <p class="company-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <nav class="footer-links">
+        <a href="#">Footer Link 1</a>
+        <a href="#">Footer Link 2</a>
+        <a href="#">Footer Link 3</a>
+        <a href="#">Footer Link 4</a>
+      </nav>
     </footer>
   </body>
 </html>
